-afix: overflow property issue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -150,13 +150,12 @@ footer>button:only-child {
   justify-content: space-between;
   height: 100vh;
   width: 100vw;
-
-  /* max-width: 1000px; */
+  max-width: 1000px;
 }
 
 .lesson-wrapper {
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   flex-direction: column;
   gap: 24px;
 
@@ -189,7 +188,7 @@ footer>button:only-child {
   background-color: var(--black-100);
 
   & main {
-    overflow: scroll;
+    overflow: auto;
   }
 
   & main h1 {
